--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-secure-store": "~14.2.3",
@@ -34,6 +35,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -47,11 +49,11 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "validator": "^13.15.15",
-    "expo-image-picker": "~16.1.4"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash": "^4.17.20",
     "@types/prop-types": "^15.7.15",
     "@types/react": "~19.0.10",
     "@types/validator": "^13.15.2",
