--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
     ],
     "scheme": "baancoffee",
     "extra": {
-      "serverApi": "127.0.0.1:9302"
+      "serverApi": "baan-coffee-production.up.railway.app"
     }
   }
 }
